--- a/backend/src/main/resources/static/profileCompany.html
+++ b/backend/src/main/resources/static/profileCompany.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
-
+<body>
 <header>
   <a class="site-title" href="/indexCompany.html">CareerTracker</a>
 </header>
@@ -17,27 +17,41 @@
 
   <p id="note">Loading company profile…</p>
 
+  <!-- ===== VIEW MODE ===== -->
   <div id="viewMode" class="hidden">
     <p><strong>Name:</strong> <span id="viewName"></span></p>
     <p><strong>Email:</strong> <span id="viewEmail"></span></p>
     <p><strong>Description:</strong> <span id="viewDescription"></span></p>
+    <p><strong>City:</strong> <span id="viewCity"></span></p>
+    <p><strong>Street:</strong> <span id="viewStreet"></span></p>
+    <p><strong>Number:</strong> <span id="viewNumber"></span></p>
 
     <div class="spaced">
       <button id="editBtn" class="btn">Edit</button>
     </div>
   </div>
 
+  <!-- ===== EDIT MODE ===== -->
   <form id="editMode" class="hidden">
     <input type="hidden" id="companyId">
 
     <label for="name">Company name</label>
-    <input id="name" type="text">
+    <input id="name" type="text" required>
 
     <label for="email">Email</label>
-    <input id="email" type="email">
+    <input id="email" type="email" required>
 
     <label for="description">Description</label>
-    <textarea id="description"></textarea>
+    <textarea id="description" required></textarea>
+
+    <label for="city">City</label>
+    <input id="city" type="text" required>
+
+    <label for="street">Street</label>
+    <input id="street" type="text" required>
+
+    <label for="number">Number</label>
+    <input id="number" type="text" required>
 
     <div class="button-row">
       <button type="submit" class="btn">Save</button>
@@ -55,32 +69,31 @@
 <script>
 (function () {
 
-  const companyId = localStorage.getItem('loggedId'); // <-- this is your company/account id
-  if (!companyId) {
-    console.warn('No company ID found in localStorage, redirecting to login');
+  const accountId = localStorage.getItem('loggedId');
+  if (!accountId) {
     window.location.href = '/login.html';
     return;
   }
-  // ===== AUTHENTICATED FETCH USING COOKIES =====
+
+  // ===== AUTH FETCH (COOKIE-BASED AUTH) =====
   window.authFetch = function (url, opts = {}) {
-    opts = opts || {};
-    opts.credentials = 'include'; // send HttpOnly cookie automatically
+    opts.credentials = 'include';
     opts.headers = opts.headers || {};
     return fetch(url, opts);
   };
-
-
 
   const note = document.getElementById('note');
   const viewMode = document.getElementById('viewMode');
   const editMode = document.getElementById('editMode');
   const message = document.getElementById('message');
 
-  // ===== LOAD COMPANY PROFILE =====
+  // ===== LOAD COMPANY =====
   async function loadCompany() {
-    
     try {
-      const res = await authFetch('/Company/getCompanyByAccountId/' + encodeURIComponent(companyId));
+      const res = await authFetch(
+        '/Company/getCompanyByAccountId/' + encodeURIComponent(accountId)
+      );
+
       if (res.status === 401 || res.status === 403) {
         window.location.href = '/login.html';
         return;
@@ -90,38 +103,46 @@
         note.textContent = 'No company profile found.';
         return;
       }
+
       if (!res.ok) throw new Error('Failed to load company');
 
       const company = await res.json();
 
-      document.getElementById('companyId').value = companyId;
+      document.getElementById('companyId').value = company.id || company.companyId;
+
+      // ===== EDIT MODE FIELDS =====
       document.getElementById('name').value = company.name || '';
       document.getElementById('email').value = company.email || '';
       document.getElementById('description').value = company.description || '';
+      document.getElementById('city').value = company.city || '';
+      document.getElementById('street').value = company.street || '';
+      document.getElementById('number').value = company.number || '';
 
+      // ===== VIEW MODE FIELDS =====
       document.getElementById('viewName').textContent = company.name || '';
       document.getElementById('viewEmail').textContent = company.email || '';
       document.getElementById('viewDescription').textContent = company.description || '';
+      document.getElementById('viewCity').textContent = company.city || '';
+      document.getElementById('viewStreet').textContent = company.street || '';
+      document.getElementById('viewNumber').textContent = company.number || '';
 
       note.classList.add('hidden');
       viewMode.classList.remove('hidden');
       editMode.classList.add('hidden');
+
     } catch (err) {
       console.error(err);
       note.textContent = 'Error loading company profile.';
     }
   }
 
-  // ===== UI BINDINGS =====
+  // ===== EDIT BUTTON =====
   document.getElementById('editBtn').addEventListener('click', () => {
-    document.getElementById('name').value = document.getElementById('viewName').textContent || '';
-    document.getElementById('email').value = document.getElementById('viewEmail').textContent || '';
-    document.getElementById('description').value = document.getElementById('viewDescription').textContent || '';
-
     viewMode.classList.add('hidden');
     editMode.classList.remove('hidden');
   });
 
+  // ===== CANCEL BUTTON =====
   document.getElementById('cancelBtn').addEventListener('click', () => {
     editMode.classList.add('hidden');
     viewMode.classList.remove('hidden');
@@ -129,44 +150,56 @@
   });
 
   // ===== SAVE COMPANY =====
-  editMode.addEventListener('submit', async function (e) {
+  editMode.addEventListener('submit', async (e) => {
     e.preventDefault();
     message.textContent = '';
+
     const saveBtn = editMode.querySelector('button[type="submit"]');
     if (saveBtn) saveBtn.disabled = true;
 
     try {
       const companyId = document.getElementById('companyId').value;
+
       const payload = {
-        name: document.getElementById('name').value,
-        email: document.getElementById('email').value,
-        description: document.getElementById('description').value
+        name: document.getElementById('name').value.trim(),
+        email: document.getElementById('email').value.trim(),
+        description: document.getElementById('description').value.trim(),
+        city: document.getElementById('city').value.trim(),
+        street: document.getElementById('street').value.trim(),
+        number: document.getElementById('number').value.trim()
       };
 
-      const res = await authFetch(`/Company/updateCompany/${encodeURIComponent(companyId)}`, {
-        method: 'PUT',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(payload)
-      });
+      const res = await authFetch(
+        `/Company/updateCompany/${encodeURIComponent(companyId)}`,
+        {
+          method: 'PUT',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(payload)
+        }
+      );
 
       if (!res.ok) {
-        const text = await res.text().catch(() => '<no response>');
-        throw new Error(text || `Failed to save changes (${res.status})`);
+        const text = await res.text().catch(() => '');
+        throw new Error(text || 'Failed to save company');
       }
 
-      // update view
+      // update view mode immediately
       document.getElementById('viewName').textContent = payload.name;
       document.getElementById('viewEmail').textContent = payload.email;
       document.getElementById('viewDescription').textContent = payload.description;
+      document.getElementById('viewCity').textContent = payload.city;
+      document.getElementById('viewStreet').textContent = payload.street;
+      document.getElementById('viewNumber').textContent = payload.number;
 
       message.style.color = 'green';
       message.textContent = 'Saved successfully.';
       editMode.classList.add('hidden');
       viewMode.classList.remove('hidden');
+
     } catch (err) {
-      console.error('Error saving company', err);
+      console.error(err);
       message.style.color = 'red';
-      message.textContent = err.message || 'Error saving changes';
+      message.textContent = err.message || 'Error saving company';
     } finally {
       if (saveBtn) saveBtn.disabled = false;
     }
@@ -175,6 +208,5 @@
   loadCompany();
 })();
 </script>
-
-
+</body>
 </html>
