--- a/backend/src/main/resources/static/createJobApplication.html
+++ b/backend/src/main/resources/static/createJobApplication.html
@@ -45,7 +45,7 @@
 
   async function authFetch(url, opts = {}) {
     opts = opts || {};
-    opts.credentials = 'include'; // send HttpOnly cookies automatically
+    opts.credentials = 'include';
     opts.headers = opts.headers || {};
     return fetch(url, opts);
   }
@@ -56,60 +56,31 @@
   const cancelBtn = document.getElementById("cancelBtn");
   const postId = getQueryParam("postId");
 
-  // ===== CANCEL BUTTON =====
   cancelBtn.addEventListener("click", () => window.history.back());
 
-  // ===== GET USER INFO =====
+  // ===== GET USER INFO FROM localStorage ONLY =====
   let userId = localStorage.getItem("loggedId");
   let accountType = localStorage.getItem("type");
 
   if (!userId || !accountType) {
-    try {
-      // fallback to backend
-      const resId = await authFetch("/Account/getLoggedAccountId");
-      if (resId.ok) {
-        const data = await resId.json();
-        userId = data.accountId;
-        localStorage.setItem("loggedId", userId);
-      }
-
-      const resType = await authFetch("/Account/getAccountType");
-      if (resType.ok) {
-        const data = await resType.json();
-        accountType = data.type;
-        localStorage.setItem("type", accountType);
-      }
-
-    } catch (err) {
-      console.error(err);
-      message.style.color = "red";
-      message.textContent = "You must be logged in to create an application.";
-      form.querySelector("button[type='submit']").disabled = true;
-      return;
-    }
+    message.style.color = "red";
+    message.textContent = "You must be logged in to create an application.";
+    form.querySelector("button[type='submit']").disabled = true;
+    return;
   }
 
   // ===== VALIDATE USER PROFILE BEFORE ALLOWING APPLICATION =====
   async function validateUserProfile(uid) {
     try {
-      // route through Account API so backend returns the appropriate user object
-      const r = await authFetch(`/Account/getUserByAccountId/${encodeURIComponent(uid)}`);
-      if (r.status === 404) {
+      const res = await authFetch(`/Account/getAccountById/${encodeURIComponent(uid)}`);
+      if (!res.ok) {
         message.style.color = "red";
         message.textContent = "No user profile found for this account.";
         form.querySelector("button[type='submit']").disabled = true;
         return false;
       }
-      if (!r.ok) throw new Error(`Failed to load user profile (${r.status})`);
 
-      const raw = await r.json();
-      // normalize shapes: direct object, array, {user:...}, {data:...}
-      let user = raw;
-      if (Array.isArray(raw) && raw.length > 0) user = raw[0];
-      else if (raw?.user) user = raw.user;
-      else if (raw?.data) user = raw.data;
-
-      console.debug('Normalized user object for validation:', user);
+      const user = await res.json();
 
       const requiredChecks = [
         { label: 'First name', keys: ['firstName', 'first_name', 'name'] },
@@ -119,33 +90,21 @@
         { label: 'Description', keys: ['description', 'bio', 'about'] }
       ];
 
-      function resolveKey(obj, key) {
-        if (!obj || !key) return undefined;
-        if (!key.includes('.')) return obj[key];
-        return key.split('.').reduce((acc, part) => (acc && acc[part] !== undefined) ? acc[part] : undefined, obj);
-      }
-
       function hasAnyKey(obj, keys) {
-        return keys.some(k => {
-          const v = resolveKey(obj, k);
-          return v !== undefined && v !== null && String(v).trim() !== '';
-        });
+        return keys.some(k => obj[k] !== undefined && obj[k] !== null && String(obj[k]).trim() !== '');
       }
 
       const missing = requiredChecks.filter(rc => !hasAnyKey(user, rc.keys)).map(rc => rc.label);
       if (missing.length > 0) {
-        const presentKeys = Object.keys(user || {}).slice(0,50).join(', ') || '<none>';
         message.style.color = "red";
-        message.textContent = `Complete your user profile before applying. Missing: ${missing.join(', ')}. (present: ${presentKeys})`;
-        console.warn('User present keys:', presentKeys);
+        message.textContent = `Complete your user profile before applying. Missing: ${missing.join(', ')}.`;
         form.querySelector("button[type='submit']").disabled = true;
         return false;
       }
 
-      // all checks passed
       return true;
     } catch (err) {
-      console.error('User profile validation error', err);
+      console.error(err);
       message.style.color = "red";
       message.textContent = "Error loading user profile.";
       form.querySelector("button[type='submit']").disabled = true;
@@ -153,13 +112,12 @@
     }
   }
 
-  // run validation and stop if it fails
   if (!(await validateUserProfile(userId))) return;
 
   // ===== INITIALIZE FORM =====
-  if (!postId || !userId) {
+  if (!postId) {
     message.style.color = "red";
-    message.textContent = "Missing post or user ID.";
+    message.textContent = "Missing post ID.";
     form.querySelector("button[type='submit']").disabled = true;
     return;
   }
@@ -169,9 +127,9 @@
 
   // ===== SET HOME LINK =====
   const homeLink = document.getElementById("homeLink");
-  if (accountType === "USER") homeLink.href = "/indexUser.html";
-  else if (accountType === "COMPANY") homeLink.href = "/indexCompany.html";
-  else homeLink.href = "/index.html";
+  homeLink.href = accountType === "USER" ? "/indexUser.html"
+                : accountType === "COMPANY" ? "/indexCompany.html"
+                : "/index.html";
 
   // ===== FORM SUBMISSION =====
   form.addEventListener("submit", async function (e) {
@@ -186,7 +144,7 @@
         userId: Number(userId),
         userDescription: document.getElementById("userDescription").value,
         status: "SUBMITTED",
-        createdAt: new Date().toISOString() // optional, backend can set
+        createdAt: new Date().toISOString()
       };
 
       const res = await authFetch("/JobApplication/insertApplication", {
@@ -206,10 +164,7 @@
       submitBtn.disabled = true;
       document.getElementById("userDescription").disabled = true;
 
-      // ===== REDIRECT AFTER DELAY =====
-      setTimeout(() => {
-        window.location.href = "/displayJobApplication.html";
-      }, 500); //  delay
+      setTimeout(() => window.location.href = "/displayJobApplication.html", 500);
 
     } catch (err) {
       console.error(err);
