fixed update accoutn by dviidning, we need to fix here

--- a/backend/src/main/resources/static/profileCompany.html
+++ b/backend/src/main/resources/static/profileCompany.html
@@ -171,7 +171,7 @@
         number: document.getElementById('number').value.trim()
       };
 
-      const res = await authFetch(`/Account/updateAccount/${encodeURIComponent(companyId)}`, {
+      const res = await authFetch(`/Company/updateCompany/${encodeURIComponent(companyId)}`, {
         method: 'PUT',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify(payload)
