--- a/backend/src/main/resources/static/displayJobPost.html
+++ b/backend/src/main/resources/static/displayJobPost.html
@@ -132,7 +132,7 @@
             <td>${p.description || ''}</td>
             <td>${p.duration || ''}</td>
             <td>${p.available || ''}</td>
-            <td>${p.salary || ''}</td>
+            <td>${p.salary || 'Not specified'}</td>
           `;
           tr.style.cursor = 'pointer';
           tr.addEventListener('click', () => {
