--- a/backend/src/main/resources/static/profileUser.html
+++ b/backend/src/main/resources/static/profileUser.html
@@ -87,12 +87,13 @@
       const user = await res.json();
 
       document.getElementById('userId').value = user.id || user.userId || '';
-      const first = user.firstName || '';
-      const last = user.lastName || '';
+      const first = user.firstName || '---';
+      const last = user.lastName || '---';
+      const description = user.description || '---';
       document.getElementById('viewFirstName').textContent = first;
       document.getElementById('viewLastName').textContent = last;
-      document.getElementById('viewEmail').textContent = user.email || '';
-      document.getElementById('viewDescription').textContent = user.description || '';
+      document.getElementById('viewEmail').textContent = user.email;
+      document.getElementById('viewDescription').textContent = description;
 
       note.classList.add('hidden');
       viewMode.classList.remove('hidden');
